--- a/src/less/apply/applyform.less
+++ b/src/less/apply/applyform.less
@@ -25,7 +25,7 @@
     }
 
     h2 {
-      font-family: 'AvenirNextLTPro-Regular', 'AvenirNextLTPro-Medium';
+      font-family: 'TTNorms-Regular', 'TTNorms-Medium';
       text-align: left;
       font-size: 1.5em;
       border-bottom: 1px solid #d5dae6;
@@ -55,7 +55,7 @@
     }
 
     label {
-      font-family: 'AvenirNextLTPro-Medium', sans-serif;
+      font-family: 'TTNorms-Medium', sans-serif;
       font-size: 14px;
       color: #505050;
       margin-bottom: 5px;
@@ -86,7 +86,7 @@
 
     input,
     textarea {
-      font-family: "AvenirNextLTPro-Regular", sans-serif;
+      font-family: "TTNorms-Regular", sans-serif;
       outline: 0;
       background: #f2f2f2;
       width: 100%;
@@ -99,7 +99,7 @@
 
       &::placeholder {
 				color: #828294;
-				font-family: 'AvenirNextLTPro-Regular',sans-serif!important;
+				font-family: 'TTNorms-Regular',sans-serif!important;
 			}
 
       &:focus {
@@ -253,7 +253,7 @@
   display:none;
 }
 button {
-  font-family: "AvenirNextLTPro-Regular", sans-serif;
+  font-family: "TTNorms-Regular", sans-serif;
   text-transform: uppercase;
   outline: 0;
   background: @theme-color !important;
