--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -89,7 +89,7 @@
 
 				a {
 					color: white;
-					font-family: 'AvenirNextLTPro-Regular', sans-serif !important;
+					font-family: 'TTNorms-Regular', sans-serif !important;
 					border: none;
 					font-size: 1em;
 				}
@@ -163,7 +163,7 @@
 			width: -moz-fit-content;
 			width: fit-content;
 			text-align: center;
-			font-family: 'AvenirNextLTPro-Regular';
+			font-family: 'TTNorms-Regular';
 			transition: all 0.2s ease-out;
 			font-size: 0.8em;
 			min-width: 45%;
@@ -243,7 +243,7 @@
 		margin: 15px 0;
 		text-transform: none;
 		font-size: 1em;
-		font-family: 'AvenirNextLTPro-Regular',sans-serif;
+		font-family: 'TTNorms-Regular',sans-serif;
 		font-size: 0.9em;
 		line-height: 1.6;
 		@media(max-width: 600px) {
