--- a/src/less/global/menu.less
+++ b/src/less/global/menu.less
@@ -118,7 +118,7 @@ header {
   width: 226px;
   position: absolute;
   font-size: 1em;
-  font-family: 'AvenirNextLTPro-Medium',sans-serif!important;
+  font-family: 'TTNorms-Medium',sans-serif!important;
   font-weight: 200;
   transition: 0.3s all;
   outline: none;
@@ -143,7 +143,7 @@ header {
 
     a {
       font-size: .8em;
-      font-family: AvenirNextLTPro-Medium;
+      font-family: TTNorms-Medium;
     }
 
     &:nth-child(even) {
