--- a/src/less/global/pagination.less
+++ b/src/less/global/pagination.less
@@ -136,7 +136,7 @@
 		max-width: 37%;
 		line-height: 1.3;
 		font-size: 1em;
-		font-family: AvenirNextLTPro-Medium;
+		font-family: TTNorms-Medium;
 		font-weight: 100;
 		background: none;
 		border: 1px solid #7EA8B7;
