--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -56,7 +56,7 @@
 			-webkit-line-clamp: 3;
 			-webkit-box-orient: vertical;
 			text-overflow: ellipsis;
-			font-family: 'AvenirNextLTPro-Regular',sans-serif !important;
+			font-family: 'TTNorms-Regular',sans-serif !important;
 			line-height: 1.55;
 			font-size: 1em;
 			font-weight: 500;
@@ -70,7 +70,7 @@
 			}
 
 			a {
-				font-family: 'AvenirNextLTPro-Medium',sans-serif !important;
+				font-family: 'TTNorms-Medium',sans-serif !important;
 			}
 
 			* {
@@ -109,7 +109,7 @@
 			Line-height: 1.15;
 			margin: 0 0 10px;
 			font-weight: 900;
-			font-family: 'ProductSans-Bold', 'AvenirNextLTPro-Medium';
+			font-family: 'ProductSans-Bold', 'TTNorms-Medium';
 			@media(max-width: 600px) {
 				font-size: 1.4em;
 				margin: 0 0 10px;
@@ -126,7 +126,7 @@
 					color: @secondary-color;
 				}
 				@media(max-width: 600px) {
-					font-family: 'ProductSans-Bold', 'AvenirNextLTPro-Medium';
+					font-family: 'ProductSans-Bold', 'TTNorms-Medium';
 					font-weight: 500;
 				}
 			}
@@ -139,7 +139,7 @@
 			text-align: left;
 			font-size: 1.2em;
 			color: #153b52;
-			font-family: 'AvenirNextLTPro-Medium',sans-serif;
+			font-family: 'TTNorms-Medium',sans-serif;
 			@media(max-width: 600px) {
 				font-size: 1.05em !important;
 				-webkit-line-clamp: 2;
@@ -187,7 +187,7 @@
 		display: flex;
 		align-items: center;
 		flex-direction: row;
-		font-family: 'AvenirNextLTPro-Regular', sans-serif;
+		font-family: 'TTNorms-Regular', sans-serif;
 		width: 100%;
 		justify-content: space-between;
 		max-width: 440px;
@@ -203,7 +203,7 @@
 
 		a {
 			color: #5aa8bf;
-			font-family: 'AvenirNextLTPro-Medium','AvenirNextLTPro-Medium', 'sans-serif';
+			font-family: 'TTNorms-Medium','TTNorms-Medium', 'sans-serif';
 		}
 
 		.author-mobile {
@@ -222,12 +222,12 @@
 
 				.mobile-name {
 					margin-bottom: 2px;
-					font-family: 'AvenirNextLTPro-Medium', sans-serif;
+					font-family: 'TTNorms-Medium', sans-serif;
 					letter-spacing: .2px;
 				}
 
 				.mobile-date {
-					font-family: 'AvenirNextLTPro-Regular';
+					font-family: 'TTNorms-Regular';
 					font-size: 0.9em;
 				}
 			}
@@ -236,7 +236,7 @@
 				text-transform: capitalize;
 				line-height: 1;
 				font-size: 1em;
-				font-family: 'AvenirNextLTPro-Regular';
+				font-family: 'TTNorms-Regular';
 				color: @meta-color;
 			}
 			@media (max-width: 800px) {
@@ -246,7 +246,7 @@
 
 		.meta-item {
 			display: flex;
-			font-family: 'AvenirNextLTPro-Regular','AvenirNextLTPro-Medium';
+			font-family: 'TTNorms-Regular','TTNorms-Medium';
 			align-items: center;
 			font-size: 16px;
 			padding: 0;
@@ -274,7 +274,7 @@
 				span {
 					line-height: 1.2;
 					font-size: 13px;
-					font-family: 'AvenirNextLTPro-Medium','AvenirNextLTPro-Medium';
+					font-family: 'TTNorms-Medium','TTNorms-Medium';
 					@media(max-width: 600px) {
 						font-size: 13px;
 						font-weight: 100;
@@ -317,7 +317,7 @@
 				}
 
 				span {
-					font-family: 'AvenirNextLTPro-Regular', sans-serif;
+					font-family: 'TTNorms-Regular', sans-serif;
 					color: @meta-color;
 					line-height: 1;
 					overflow: hidden;
@@ -343,7 +343,7 @@
 
 			&.date {
 				span {
-					font-family: 'AvenirNextLTPro-Regular', sans-serif;
+					font-family: 'TTNorms-Regular', sans-serif;
 					color: @meta-color !important;
 					overflow: hidden;
 					white-space: nowrap;
@@ -410,7 +410,7 @@
 				padding: 13px 18px;
 				font-size: 14px;
 				height: fit-content;
-				font-family: 'AvenirNextLTPro-Medium',serif;
+				font-family: 'TTNorms-Medium',serif;
 			}
 		}
 	}
