--- a/src/less/pages/series.less
+++ b/src/less/pages/series.less
@@ -91,11 +91,11 @@
       }
 
       .sort-title {
-        font-family: 'AvenirNextLTPro-Medium';
+        font-family: 'TTNorms-Medium';
       }
 
       .sort-method {
-        font-family: 'AvenirNextLTPro-Medium';
+        font-family: 'TTNorms-Medium';
       }
     }
   }
@@ -200,7 +200,7 @@
 
         .post-excerpt {
           color: #153b52;
-          font-family: 'ProductSans-Regular','AvenirNextLTPro-Medium',serif;
+          font-family: 'ProductSans-Regular','TTNorms-Medium',serif;
           font-size: 1em;
           font-weight: 100;
           line-height: 1.21;
@@ -213,7 +213,7 @@
         }
 
         .postcount {
-          font-family: 'AvenirNextLTPro-Medium',serif;
+          font-family: 'TTNorms-Medium',serif;
           font-size: 1.3em;
         }
       }
@@ -232,7 +232,7 @@
           }
 
           span {
-            font-family: 'AvenirNextLTPro-Medium';
+            font-family: 'TTNorms-Medium';
           }
         }
 
