--- a/src/less/posts/about-author.less
+++ b/src/less/posts/about-author.less
@@ -63,7 +63,7 @@
     font-size: 1.5em;
     margin-bottom: 0;
     line-height: 1;
-    font-family: 'AvenirNextLTPro-Medium', '';
+    font-family: 'TTNorms-Medium', '';
     @media(max-width: 600px) {
       font-size: 1.3em;
     }
@@ -102,7 +102,7 @@
   justify-content: left !important;
 
   .name {
-    font-family: 'AvenirNextLTPro-Medium';
+    font-family: 'TTNorms-Bold';
     color: #5D6178;
     font-size: .9em;
     font-weight: 600;
