--- a/src/less/posts/linkpreview.less
+++ b/src/less/posts/linkpreview.less
@@ -214,7 +214,7 @@
 
     .title-desktop {
       margin: 0 0 10px!important;
-      font-family: 'AvenirNextLTPro-Medium',serif;
+      font-family: 'TTNorms-Medium',serif;
       font-size: 1.3em;
       line-height: 1.3;
       text-align: left;
@@ -231,7 +231,7 @@
     .title-mobile {
       display: none;
       margin: 10px 0 20px!important;
-      font-family: 'AvenirNextLTPro-Regular',serif;
+      font-family: 'TTNorms-Regular',serif;
       font-size: 1.2em;
       line-height: 1.2;
       font-size: 1.2;
@@ -260,7 +260,7 @@
       text-overflow: ellipsis;
       display: -webkit-box;
       -webkit-line-clamp: 4;
-      font-family: 'AvenirNextLTPro-Regular' !important;
+      font-family: 'TTNorms-Regular' !important;
       overflow: hidden;
       text-align: left;
       -webkit-box-orient: vertical;
