--- a/src/less/posts/table.less
+++ b/src/less/posts/table.less
@@ -47,17 +47,17 @@
 
       th {
         text-align: center;
-        font-family: 'AvenirNextLTPro-Regular';
+        font-family: 'TTNorms-Regular';
         min-width: 30px;
         padding: 10px;
         font-size: 0.9em;
 
         strong {
-          font-family: 'AvenirNextLTPro-Regular';
+          font-family: 'TTNorms-Regular';
         }
 
         &::before {
-          font-family: 'AvenirNextLTPro-Regular' !important;
+          font-family: 'TTNorms-Regular' !important;
         }
       }
     }
@@ -157,7 +157,7 @@
         th {
           display: block;
           padding: 10px 5px!important !important;
-          font-family: 'AvenirNextLTPro-Regular';
+          font-family: 'TTNorms-Regular';
           letter-spacing: 0.5px;
           text-align: center;
           text-align: left;
@@ -239,7 +239,7 @@
 
   .dataframe thead th {
     text-align: center !important;
-    font-family: 'AvenirNextLTPro-Regular' !important;
+    font-family: 'TTNorms-Regular' !important;
   }
 
   .dataframe tbody tr th:only-of-type {
