--- a/src/less/projects/repos.less
+++ b/src/less/projects/repos.less
@@ -17,7 +17,7 @@
 }
 
 .repo-title {
-  font-family: 'AvenirNextLTPro-Medium',serif;
+  font-family: 'TTNorms-Medium',serif;
   font-size: 18px !important;
 
   &:hover {
