--- a/src/less/author/author.less
+++ b/src/less/author/author.less
@@ -11,7 +11,7 @@
 		}
 
 		h3 {
-			font-family: 'AvenirNextLTPro-Regular', serif;
+			font-family: 'TTNorms-Regular', serif;
     	font-size: 1.5em;
 			margin: 10px;
 		}
@@ -117,7 +117,7 @@
 
 					.name {
 						font-size: 1.2em;
-						font-family: 'AvenirNextLTPro-Medium', '', sans-serif;
+						font-family: 'TTNorms-Medium', '', sans-serif;
 					}
 
 					.country,
@@ -205,7 +205,7 @@
 									line-height: 1.1;
 									width: 100%;
 									height: 14px;
-									font-family: 'AvenirNextLTPro-Medium';
+									font-family: 'TTNorms-Medium';
 									margin-top: 3px;
 								}
 							}
@@ -216,7 +216,7 @@
 								display: inline-block!important;
 								line-height: 1.4;
 								padding-top: 5px;
-								font-family: 'AvenirNextLTPro-Medium',sans-serif;
+								font-family: 'TTNorms-Medium',sans-serif;
 							}
 						}
 
@@ -279,7 +279,7 @@
 			display: block;
 			white-space: nowrap;
 			font-size: 15px;
-			font-family: 'AvenirNextLTPro-Medium', '', sans-serif;
+			font-family: 'TTNorms-Medium', '', sans-serif;
 		}
 
 		i {
