--- a/src/less/global/fonts.less
+++ b/src/less/global/fonts.less
@@ -1,23 +1,11 @@
-@import (css) url("//hello.myfonts.net/count/38c2a3?css");
+@import (css) url("//hello.myfonts.net/count/38d340?css");
 
-@font-face {
-  font-family: 'AvenirNextLTPro-Light';
-  src: url("../../../assets/fonts/38C2A3_0_0.eot");
-  src: url("../../../assets/fonts/38C2A3_0_0.eot?#iefix") format('embedded-opentype'),url('../../../assets/fonts/38C2A3_0_0.woff2') format('woff2'),url('../../../assets/fonts/38C2A3_0_0.woff') format('woff'),url('../../../assets/fonts/38C2A3_0_0.ttf') format('truetype');
-  font-display: swap;
-}
-@font-face {
-  font-family: 'AvenirNextLTPro-Medium';
-  src: url("../../../assets/fonts/38C2A3_1_0.eot");
-  src: url("../../../assets/fonts/38C2A3_1_0.eot?#iefix") format('embedded-opentype'),url('../../../assets/fonts/38C2A3_1_0.woff2') format('woff2'),url('../../../assets/fonts/38C2A3_1_0.woff') format('woff'),url('../../../assets/fonts/38C2A3_1_0.ttf') format('truetype');
-  font-display: swap;
-}
-@font-face {
-  font-family: 'AvenirNextLTPro-Regular';
-  src: url("../../../assets/fonts/38C2A3_2_0.eot");
-  src: url("../../../assets/fonts/38C2A3_2_0.eot?#iefix") format('embedded-opentype'),url('../../../assets/fonts/38C2A3_2_0.woff2') format('woff2'),url('../../../assets/fonts/38C2A3_2_0.woff') format('woff'),url('../../../assets/fonts/38C2A3_2_0.ttf') format('truetype');
-  font-display: swap;
-}
+
+@font-face {font-family: 'TTNorms-Bold';src: url('../../../assets/fonts/38D340_0_0.eot');src: url('../../../assets/fonts/38D340_0_0.eot?#iefix') format('embedded-opentype'),url('../../../assets/fonts/38D340_0_0.woff2') format('woff2'),url('../../../assets/fonts/38D340_0_0.woff') format('woff'),url('../../../assets/fonts/38D340_0_0.ttf') format('truetype');}
+@font-face {font-family: 'TTNorms-Medium';src: url('../../../assets/fonts/38D340_1_0.eot');src: url('../../../assets/fonts/38D340_1_0.eot?#iefix') format('embedded-opentype'),url('../../../assets/fonts/38D340_1_0.woff2') format('woff2'),url('../../../assets/fonts/38D340_1_0.woff') format('woff'),url('../../../assets/fonts/38D340_1_0.ttf') format('truetype');}
+@font-face {font-family: 'TTNorms-Regular';src: url('../../../assets/fonts/38D340_2_0.eot');src: url('../../../assets/fonts/38D340_2_0.eot?#iefix') format('embedded-opentype'),url('../../../assets/fonts/38D340_2_0.woff2') format('woff2'),url('../../../assets/fonts/38D340_2_0.woff') format('woff'),url('../../../assets/fonts/38D340_2_0.ttf') format('truetype');}
+
+
 /* latin */
 @font-face {
   font-family: 'ProductSans-Regular';
