--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -38,7 +38,7 @@
 			width: 90%;
 			color: #527089;
 			font-size: 1em;
-			font-family: 'AvenirNextLTPro-Medium',sans-serif!important;
+			font-family: 'TTNorms-Medium',sans-serif!important;
 			font-weight: 200;
 			-webkit-transition: 0.3s all;
 			transition: 0.3s all;
@@ -49,7 +49,7 @@
 
 			&::placeholder {
 				color: #828294;
-				font-family: 'AvenirNextLTPro-Regular',sans-serif!important;
+				font-family: 'TTNorms-Regular',sans-serif!important;
 			}
 
 			&:hover {
@@ -80,7 +80,7 @@
 
 	#nav-search {
 		font-size: 1em;
-		font-family: 'AvenirNextLTPro-Medium',sans-serif!important;
+		font-family: 'TTNorms-Medium',sans-serif!important;
 		font-weight: 200;
 		transition: 0.3s all;
 		outline: none;
@@ -159,7 +159,7 @@
 
 	#my-custom-results {
 		font-size: 1em;
-		font-family: 'AvenirNextLTPro-Medium',sans-serif!important;
+		font-family: 'TTNorms-Medium',sans-serif!important;
 		font-weight: 200;
 		transition: 0.3s all;
 		outline: none;
@@ -252,7 +252,7 @@
 			-ms-transition: all 0.2s ease;
 			-o-transition: all 0.2s ease;
 			transition: all 0.2s ease;
-			font-family: 'AvenirNextLTPro-Regular',sans-serif;
+			font-family: 'TTNorms-Regular',sans-serif;
 			flex-grow: 1;
 			text-align: center;
 			transition: all 0.2s ease;
@@ -572,7 +572,7 @@
 			letter-spacing: 0;
 			font-size: 15px;
 			margin: 0;
-			font-family: 'AvenirNextLTPro-Regular',sans-serif;
+			font-family: 'TTNorms-Regular',sans-serif;
 			display: flex;
 			align-items: center;
 
@@ -671,7 +671,7 @@
 			line-height: 1.4;
 			font-size: 15px;
 			margin: 0;
-			font-family: 'AvenirNextLTPro-Regular', sans-serif;
+			font-family: 'TTNorms-Regular', sans-serif;
 			display: inline-block;
 
 			&:hover {
@@ -697,7 +697,7 @@
 			margin-bottom: 15px;
 			letter-spacing: 1px;
 			margin-top: 0;
-			font-family: 'AvenirNextLTPro-Medium',serif;
+			font-family: 'TTNorms-Medium',serif;
 			@media(max-width: 1040px) {
 				font-size: 1.3em !important;
 			}
@@ -708,7 +708,7 @@
 			font-size: 0.9em;
 			line-height: 1.7;
 			padding-right: 0;
-			font-family: 'AvenirNextLTPro-Regular', sans-serif;
+			font-family: 'TTNorms-Regular', sans-serif;
 		}
 	}
 
@@ -719,7 +719,7 @@
 		.post-title {
 			a {
 				color: #208cad;
-				font-family: 'AvenirNextLTPro-Medium',sans-serif;
+				font-family: 'TTNorms-Medium',sans-serif;
 				transition: all 0.2s ease;
 
 				&:hover {
@@ -733,7 +733,7 @@
 			margin-bottom: 10px;
 			text-transform: uppercase;
 			font-size: 1.2em;
-			font-family: 'ProductSans-Medium', AvenirNextLTPro-Medium, serif;
+			font-family: 'ProductSans-Medium', TTNorms-Medium, serif;
 			color: @header-color;
 			font-weight: 500;
 		}
@@ -744,7 +744,7 @@
 			font-weight: 500;
 			margin-bottom: 8px;
 			text-transform: uppercase;
-			font-family: 'AvenirNextLTPro-Medium',AvenirNextLTPro-Medium,serif;
+			font-family: 'TTNorms-Medium',TTNorms-Medium,serif;
 			letter-spacing: 1px;
 			color: #1f5373;
 			margin-top: 0;
@@ -806,11 +806,11 @@
 				margin-bottom: 17px;
 				line-height: 1.35;
 				padding: 0 0 10px;
-				font-family: 'AvenirNextLTPro-Medium' ,sans-serif;
+				font-family: 'TTNorms-Medium' ,sans-serif;
 
 				.post-title,
 				.single-author-name {
-					font-family: 'AvenirNextLTPro-Medium', sans-serif;
+					font-family: 'TTNorms-Medium', sans-serif;
 					.transition(all 0.2s ease);
 					@media(max-width: 600px) {
 						text-align: left;
@@ -827,7 +827,7 @@
 					font-size: 13px;
 					opacity: 1;
 					margin-top: 5px;
-					font-family: 'AvenirNextLTPro-Regular', sans-serif;
+					font-family: 'TTNorms-Regular', sans-serif;
 
 					i {
 						margin-right: 5px;
@@ -849,7 +849,7 @@
 				margin: 15px 0 20px;
 				font-size: 0.9em;
 				line-height: 1.5;
-				font-family: 'AvenirNextLTPro-Regular', sans-serif;
+				font-family: 'TTNorms-Regular', sans-serif;
 			}
 
 			.form-group {
@@ -898,7 +898,7 @@
 			p {
 				margin-bottom: 10px;
 				font-size: 16px;
-				font-family: 'AvenirNextLTPro-Medium',sans-serif;
+				font-family: 'TTNorms-Medium',sans-serif;
 			}
 		}
 	}
