--- a/src/less/pages/cover.less
+++ b/src/less/pages/cover.less
@@ -45,16 +45,16 @@
 	}
 
 	.post-excerpt {
-		font-family: 'AvenirNextLTPro-Medium';
+		font-family: 'TTNorms-Medium';
 	}
 
 	h3 {
 		margin-bottom: 10px;
-		font-family: 'AvenirNextLTPro-Medium',serif;
+		font-family: 'TTNorms-Medium',serif;
 	}
 
 	.meta-info {
-		font-family: 'AvenirNextLTPro-Regular',sans-serif;
+		font-family: 'TTNorms-Regular',sans-serif;
 		font-size: 0.9em;
 		display: flex;
 		justify-content: space-around;
