--- a/src/less/pages/tag-page.less
+++ b/src/less/pages/tag-page.less
@@ -45,7 +45,7 @@
       .tag-name {
         font-size: 2.2em;
         color: white !important;
-        font-family: 'AvenirNextLTPro-Regular';
+        font-family: 'TTNorms-Regular';
         text-shadow: 0 0 20px #2f2d56;
         margin-top: 110px;
       }
@@ -56,7 +56,7 @@
         max-width: 90%;
         margin: 20px auto 0;
         color: white;
-        font-family: AvenirNextLTPro-Regular;
+        font-family: TTNorms-Regular;
         text-shadow: 2px 2px 0 #15133c, 2px 2px 10px #15133c;
         font-size: 1.2em;
       }
@@ -103,7 +103,7 @@
         min-height: 80px;
         margin-bottom: 55px;
         overflow: hidden;
-        font-family: 'AvenirNextLTPro-Regular';
+        font-family: 'TTNorms-Regular';
         font-size: 1em !important;
         text-overflow: ellipsis;
         font-weight: 600;
@@ -127,7 +127,7 @@
         .btn {
           padding: 12px 20px;
           font-size: 16px;
-          font-family: AvenirNextLTPro-Regular,sans-serif;
+          font-family: TTNorms-Regular,sans-serif;
 
           a {
             line-height: 1;
@@ -335,7 +335,7 @@
           margin: 5px 0;
           line-height: 1.5;
           text-align: left;
-          font-family: 'AvenirNextLTPro-Regular';
+          font-family: 'TTNorms-Regular';
           flex-grow: 1;
           flex-shrink: 0;
           flex-basis: auto;
@@ -354,7 +354,7 @@
           bottom: 20px;
           right: 20px;
           font-size: 0.9em;
-          font-family: 'AvenirNextLTPro-Medium';
+          font-family: 'TTNorms-Medium';
         }
       }
     }
