--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -33,7 +33,7 @@
 
 		a {
 			color: darken(@theme-color, 10%);
-			font-family: 'AvenirNextLTPro-Medium';
+			font-family: 'TTNorms-Medium';
 		}
 
 		p > a {
@@ -108,7 +108,7 @@
 		width: -webkit-fill-available;
 		margin: 35px 60px 0;
 		display: block;
-		font-family: 'ProductSans-Bold', 'AvenirNextLTPro-Medium' !important;
+		font-family: 'ProductSans-Bold', 'TTNorms-Medium' !important;
 		font-size: 2.2em;
 		font-weight: 600;
 		letter-spacing: 0;
@@ -128,13 +128,13 @@
 			letter-spacing: 0;
 			font-weight: 600;
 			text-align: center;
-			font-family: 'ProductSans-Medium', 'AvenirNextLTPro-Medium' !important;
+			font-family: 'ProductSans-Medium', 'TTNorms-Medium' !important;
 		}
 
 		a {
 			color: @h1-color;
 			transition: all 0.2s ease-out;
-			font-family: 'ProductSans-Bold', 'AvenirNextLTPro-Medium' !important;
+			font-family: 'ProductSans-Bold', 'TTNorms-Medium' !important;
 
 			&:hover {
 				color: @secondary-color;
@@ -148,7 +148,7 @@
 		margin: 0 60px;
 		line-height: 1.3;
 		color: @h1-color;
-		font-family: 'AvenirNextLTPro-Medium';
+		font-family: 'TTNorms-Medium';
 		@media(max-width: 800px) {
 			margin: 10px 40px 0;
 		}
@@ -196,7 +196,7 @@
 		margin-top: 50px;
 		color: @header-color;
 		margin-bottom: 8px;
-		font-family: 'AvenirNextLTPro-Medium';
+		font-family: 'TTNorms-Medium';
 		@media(max-width: 800px) {
 			font-size: 1.3em;
 		}
@@ -214,7 +214,7 @@
 	p {
 		text-align: left;
 		font-size: 1em;
-		line-height: 1.6;
+		line-height: 1.7;
 		color: #393a40;
 		-webkit-font-smoothing: auto;
 		@media(max-width: 600px) {
@@ -297,7 +297,7 @@
 			}
 
 			span {
-				font-family: 'AvenirNextLTPro-Regular',sans-serif;
+				font-family: 'TTNorms-Regular',sans-serif;
 				font-weight: 500;
 			}
 
@@ -323,9 +323,9 @@
 
 				span {
 					font-size: 1em;
+					font-family: 'TTNorms-Medium',sans-serif;
 					@media(max-width: 600px) {
 						font-size: 0.9em;
-						font-family: 'AvenirNextLTPro-Medium', sans-serif;
 					}
 				}
 
@@ -350,6 +350,14 @@
 			span {
 				text-transform: capitalize;
 				color: #467192;
+			}
+
+			a {
+				* {
+					&:hover {
+						color: @hover-color;
+					}
+				}
 			}
 		}
 
@@ -380,7 +388,7 @@
 
 			span {
 				@media(max-width: 600px) {
-					font-family: 'AvenirNextLTPro-Medium', sans-serif;
+					font-family: 'TTNorms-Medium', sans-serif;
 				}
 			}
 
@@ -434,6 +442,8 @@
 	position: relative;
 	overflow: hidden;
 	order: 1;
+
+	.post-content {
 
 	ol,
 	ul {
@@ -504,7 +514,7 @@
 			&::before {
 				content: counter(my-awesome-counter) ". ";
 				color: darken(@theme-color, 20%);
-				font-family: 'AvenirNextLTPro-Regular';
+				font-family: 'TTNorms-Regular';
 				font-size: 15px;
 				font-weight: bold;
 				display: inline-block;
@@ -512,6 +522,7 @@
 			}
 		}
 	}
+}
 	/*   Start of Protip box */
 	.protip {
 		background: rgba(255, 222, 196, 0.42);
@@ -576,7 +587,7 @@
 		background: #e9f3f7;
 		color: #416e7d;
 		padding: 20px;
-		font-family: 'AvenirNextLTPro-Regular',sans-serif;
+		font-family: 'TTNorms-Regular',sans-serif;
 		font-style: none;
 		font-size: 1em;
 		line-height: 1.6;
@@ -595,7 +606,7 @@
 		}
 
 		* {
-			font-family: 'AvenirNextLTPro-Regular',sans-serif;
+			font-family: 'TTNorms-Regular',sans-serif;
 			font-weight: 500;
 			line-height: 1.6;
 			font-size: 0.96em;
