--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -35,7 +35,7 @@
 			transition: all 0.3s;
 			line-height: 1;
 			padding: 8px 10px;
-			font-family: 'AvenirNextLTPro-Regular';
+			font-family: 'TTNorms-Regular';
 			border-radius: 2px;
 			transition: all 0.3s ease-out;
 			@media(max-width:800px) {
@@ -47,6 +47,7 @@
 				background: @hover-color;
 				box-shadow: 2px 2px 0 #239084;
 				color: white !important;
+
 				* {
 					color: white !important;
 				}
@@ -87,11 +88,11 @@
 				margin: auto 0;
 				min-width: 23%;
 				@media(max-width: 800px) {
-			    min-width: none !important;
+					min-width: none !important;
 					border: 1px solid #eaeaea;
 				}
 				@media(max-width: 600px) {
-			    border: none;
+					border: none;
 				}
 
 				&:before {
@@ -101,7 +102,7 @@
 				a {
 					text-align: center;
 					display: block;
-				  padding: 7px 0 7px 0 !important;
+					padding: 7px 0 7px 0 !important;
 					width: -webkit-fill-available;
 					width: -moz-fill-available;
 				}
@@ -171,7 +172,6 @@
 					font-size: 19px;
 					display: block;
 					width: fit-content;
-
 					@media(max-width: 800px) {
 						font-size: 27px;
 					}
@@ -195,13 +195,118 @@
 
 					i {
 						-webkit-transform: scale(1.15);
-					  transform: scale(1.15);
+						transform: scale(1.15);
 					}
-
 
 					span {
 						color: #fff;
 					}
+				}
+			}
+		}
+	}
+
+	.nextprev-container {
+		display: none;
+		margin-left: calc(~"-50vw + 60%");
+		margin-right: calc(~"-50vw + 50%");
+		width: 855px;
+
+		.nextprev {
+			display: flex;
+			flex-direction: row;
+			flex-wrap: nowrap;
+			margin-top: 30px;
+			border-top: 1px solid #ecf0f9;
+			margin-bottom: -30px;
+
+			.prev-article {
+				border-right: 1px solid #ecf0f9;
+				visibility: hidden;
+
+				.info {
+					margin-left: 30px;
+					justify-content: flex-start;
+				}
+			}
+
+			.next-article {
+				border-left: 1px solid #ecf0f9;
+				visibility: hidden;
+
+				.info {
+					margin-right: 30px;
+					justify-content: flex-end;
+
+					* {
+						text-align: right;
+					}
+				}
+			}
+
+			.seriespagination {
+				width: 50%;
+				display: inline-block;
+				display: flex;
+				flex-direction: row;
+				justify-content: left;
+				align-items: center;
+				padding: 30px 10px;
+
+				* {
+					transition: all .3s ease-out;
+				}
+
+				&:hover {
+					background: @theme-color;
+					* {
+						color: white !important;
+						fill: white !important;
+						cursor: pointer;
+					}
+				}
+
+				svg {
+					fill: @theme-color;
+					color: #0db0e2;
+					height: 28px;
+					width: 28px;
+
+					* {
+						color: #0db0e2;
+						fill: #0db0e2;
+					}
+				}
+
+				.info {
+					width: -webkit-fill-available;
+					width: -moz-fill-available;
+					display: flex;
+					flex-direction: row;
+					flex-wrap: wrap;
+
+					* {
+						width: 100%;
+						margin: 0;
+					}
+				}
+
+				h6 {
+					line-height: 1;
+					font-family: 'TTNorms-Regular';
+					font-size: 1em;
+					margin: 0 0 5px !important;
+					color: @theme-color;
+					max-width: 90%;
+					white-space: nowrap;
+					overflow: hidden;
+					text-overflow: ellipsis;
+				}
+
+				p {
+					font-size: 0.8em;
+					line-height: 1.1;
+			    max-width: 90%;
 				}
 			}
 		}
