--- a/src/less/projects/kanban.less
+++ b/src/less/projects/kanban.less
@@ -18,7 +18,7 @@
   }
 
   h3 {
-    font-family: 'AvenirNextLTPro-Regular',sans-serif;
+    font-family: 'TTNorms-Regular',sans-serif;
     margin-bottom: 0;
     font-size: 1.4em;
   }
@@ -289,7 +289,7 @@
         position: relative;
         width: 89%;
         font-weight: 100;
-        font-family: 'AvenirNextLTPro-Medium',AvenirNextLTPro-Medium;
+        font-family: 'TTNorms-Medium',TTNorms-Medium;
         /*  &::after {
           content: "";
           width: 90px;
@@ -335,7 +335,7 @@
             font-size: .9em;
             line-height: 1.2;
             text-transform: capitalize;
-            font-family: 'AvenirNextLTPro-Regular';
+            font-family: 'TTNorms-Regular';
             color: #3c3d46;
             margin: 2px 0 20px;
             width: 97%;
@@ -464,7 +464,7 @@
               span {
                 color: #42526E;
                 font-size: 11px;
-                font-family: 'AvenirNextLTPro-Regular';
+                font-family: 'TTNorms-Regular';
                 margin-right: 0;
                 line-height: 1;
                 opacity: .8;
@@ -477,7 +477,7 @@
       .count {
         color: #ababab;
         font-size: 14px;
-        font-family: 'AvenirNextLTPro-Medium',sans-serif;
+        font-family: 'TTNorms-Medium',sans-serif;
         bottom: 0;
         padding: 4px;
         float: right;
