--- a/src/less/projects/projects-page.less
+++ b/src/less/projects/projects-page.less
@@ -30,7 +30,7 @@
   }
 
   h3 {
-    font-family: 'AvenirNextLTPro-Regular',sans-serif;
+    font-family: 'TTNorms-Regular',sans-serif;
     margin-bottom: 0;
     font-size: 1.4em;
   }
