--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -4,6 +4,12 @@
   display: none;
   background: #00608014;
   position: relative;
+  @media(max-width: 800px) {
+    margin: 0 35px 40px;
+  }
+  @media(max-width: 600px) {
+    margin: 0 25px 40px;
+  }
 
   h5 {
     padding-bottom: 0;
@@ -21,11 +27,6 @@
     top: 0;
     line-height: 1;
     height: fit-content;
-
-    @media(max-width: 600px) {
-      margin-top: 5px;
-      font-size: 1.1em;
-    }
   }
 
   ol {
@@ -34,7 +35,6 @@
     margin-bottom: 10px;
     margin-left: 0;
     padding-left: 20px;
-
     @media(max-width: 600px) {
       margin: 20px 0 10px;
     }
@@ -45,12 +45,12 @@
       counter-increment: li -1;
       color: #597d87;
       font-family: 'TTNorms-Regular';
-      font-size: .85em;
+      font-size: 0.85em;
       padding-left: 8px;
       line-height: 1;
 
       * {
-        transition: all .2s ease-out;
+        transition: all 0.2s ease-out;
       }
       @media(max-width: 600px) {
         line-height: 1.3;
@@ -74,21 +74,19 @@
         font-family: 'TTNorms-Medium' !important;
         margin-right: 8px;
         font-size: 13px;
-
         @media(max-width: 600px) {
           min-width: 60px;
           margin-right: 2px;
           font-weight: normal;
-          font-size: .9em;
+          font-size: 0.9em;
         }
       }
 
       a {
         color: #597d87;
-
         @media(max-width: 600px) {
           font-family: 'TTNorms-Regular';
-          font-size: .9em;
+          font-size: 0.9em;
         }
       }
     }
@@ -98,15 +96,15 @@
     opacity: 1 !important;
     margin-left: 0;
     font-family: 'TTNorms-Medium' !important;
+
     * {
       font-family: 'TTNorms-Medium' !important;
     }
-
-    font-size: .95em !important;
+    font-size: 0.95em !important;
 
     &::before {
       margin-left: 0;
-      font-family: 'TTNorms-Medium' !important;;
+      font-family: 'TTNorms-Medium' !important;
     }
   }
 }
