--- a/src/less/posts/languages/config.less
+++ b/src/less/posts/languages/config.less
@@ -8,7 +8,7 @@
 .language-toml,
 .language-xml,
 .language-css {
-  background: #2E3440 !important;
+  background: #2E3440;
 
   &::before{
     @media(max-width: 600px) {
