--- a/src/less/posts/languages/default.less
+++ b/src/less/posts/languages/default.less
@@ -1,14 +1,14 @@
+@import "nord.less";
+
 .hljs {
   display: block;
   overflow-x: hidden;
-  background: linear-gradient(#2d3555, #1d2036);
   overflow-wrap: break-word;
   margin: 0;
   font-weight: 200;
   line-height: 1.7;
   padding: 0 25px 20px;
   white-space: pre-wrap !important;
-  color: #e4edf1;
   font-weight: 400;
   font-family: 'Hack';
   @media(max-width: 600px) {
@@ -44,7 +44,6 @@
     content: "Code Snippet";
     background: rgba(36, 40, 66, .6);
     mix-blend-mode: color-dodge;
-    border-bottom: 1px solid #293d5c;
     @media(max-width: 600px) {
       width: -webkit-fill-available;
       width: -moz-webkit-fill-available;
