--- a/src/less/posts/languages/python.less
+++ b/src/less/posts/languages/python.less
@@ -1,7 +1,6 @@
-.language-python,
-.python.hljs {
+.language-python {
   color: #e4f8fd ;
-  background: linear-gradient(#2d4467,#1c2a40);
+  background: #152948 !important;
 
   &::before {
     height: auto;
@@ -9,9 +8,8 @@
   }
 
   .hljs-meta {
-    color: #faf2c7;
+    color: #9eb2c6;
   }
-
 
   .hljs-addition,
   .hljs-meta-string,
@@ -23,20 +21,20 @@
   }
 
   .hljs-params {
-    color: #ecb357;
+    color: #ecb357 !important;
   }
 
   .hljs-comment {
-    color: #788198;
+    color: #737a8e !important;
   }
 
   .hljs-attribute {
-    color: #d8b061;
+    color: #d8b061 !important;
   }
 
   .hljs-class,
   .hljs-title {
-    color: #ffd712;
+    color: #ffd712 !important;
     font-weight: 700;
     font-family: 'Hack';
   }
@@ -48,18 +46,18 @@
   .hljs-template-variable,
   .hljs-type,
   .hljs-variable {
-    color: #bc82d8;
+    color: #bc82d8 !important;
   }
 
   .hljs-keyword {
-    color: #00b1d5;
+    color: #00b1d5 !important;
     font-weight: 700;
     font-family: 'Hack';
   }
 
   .hljs-function {
     .hljs-keyword {
-      color: #00b1d5;
+      color: #00b1d5 !important;
     }
   }
 }
