--- a/src/less/posts/languages/shell.less
+++ b/src/less/posts/languages/shell.less
@@ -1,38 +1,38 @@
+@import "nord.less";
+
 .language-shell,
-.hljs.shell,
-.hljs.output,
 .language-output,
-.hljs.bash,
 .language-bash {
-  background: linear-gradient(#2d3555, #1d2036);
+  background: @nord0;
+  color: @nord8;
   font-weight: normal;
 
   .hljs-title {
-    color: #fad000;
+    color: @nord13;
     font-weight: normal;
   }
 
   .hljs-name {
-    color: #a1feff;
+    color: @nord4;
   }
 
   .hljs-tag {
-    color: #ffffff;
+    color: @nord9;
   }
 
   .hljs-attr {
-    color: #f8d000;
+    color: @nord14;
     font-style: italic;
   }
 
   .hljs-built_in,
   .hljs-section,
   .hljs-selector-tag {
-    color: #fb9e00;
+    color: @nord12;
   }
 
   .hljs-keyword {
-    color: #fb9e00;
+    color: @nord9;
   }
 
   .hljs-subst {
@@ -51,16 +51,16 @@
   .hljs-string,
   .hljs-symbol,
   .hljs-template-tag {
-    color: #a6c6ff;
+    color: @nord8;
   }
 
   .hljs-meta,
   .hljs-meta-string {
-    color: #fb9e00;
+    color: @nord14;
   }
 
   .hljs-comment {
-    color: #ac65ff;
+    color: @nord12;
   }
 
   .hljs-keyword,
@@ -73,7 +73,7 @@
 
   .hljs-literal,
   .hljs-number {
-    color: #fa658d;
+    color: @nord15;
   }
 
   .hljs-emphasis {
