--- a/src/less/posts/languages/sql.less
+++ b/src/less/posts/languages/sql.less
@@ -1,7 +1,5 @@
-.hljs.sql,
-.hljs.language-sql {
-  background-color: #22202f ;
-  /*selection color*/
+.language-sql {
+  background: #292648;
   .hljs span::selection,
   .hljs::selection {
     background: #373b41;
