--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -6,6 +6,7 @@
 @import 'languages/sql.less';
 @import 'languages/json.less';
 @import 'languages/config.less';
+@import 'languages/markup.less';
 
 blockquote pre {
   width: 96% !important;
@@ -133,44 +134,7 @@ blockquote pre {
     }
   }
 
-  .handlebars,
-  .hljs.html,
-  .language-css,
-  .language-endpoint,
-  .language-handlebars,
-  .language-html,
-  .language-jinja,
-  .language-xml {
-    background: linear-gradient(#383360, #27203a) !important;
-    color: #d0e1f6;
 
-    .hljs-tag {
-      color: #9cddff;
-    }
-
-    .hljs-meta {
-      color: #b9d9ff;
-    }
-
-    .hljs-attr {
-      color: #6ccae4;
-    }
-
-    .hljs-string {
-      color: #e0cd8e;
-      font-weight: 400;
-      font-family: 'Hack';
-    }
-
-    .hljs-name {
-      color: #89a4ff;
-    }
-    background: #272738;
-
-    &::before {
-      content: "HTML";
-    }
-  }
 
   .language-xml {
     &::before {
