fixes to nextprev

--- a/src/less/posts.less
+++ b/src/less/posts.less
@@ -13,6 +13,7 @@
 @import 'posts/article-preview.less';
 @import 'posts/serieswidget.less';
 @import 'posts/previewplaceholder.less';
+@import 'posts/nextprev.less';
 
 /* Code */
 @import 'posts/code.less';
