done with nextprev for real now

--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -14,8 +14,8 @@
 		display: block;
 		height: fit-content;
 	}
-	@media(max-width: 800px) {
-		padding-bottom: 0;
+	@media(max-width: 600px) {
+		padding-bottom: 130px;
 	}
 
 	.tag-list {
@@ -90,6 +90,7 @@
 				@media(max-width: 800px) {
 					min-width: none !important;
 					border: 1px solid #eaeaea;
+					height: 30px;
 				}
 				@media(max-width: 600px) {
 					border: none;
@@ -153,7 +154,7 @@
 					padding: 0;
 					display: block;
 					@media(max-width:800px) {
-						padding: 0;
+						padding: 0 !important;
 						height: fit-content;
 					}
 				}
@@ -194,8 +195,8 @@
 					text-decoration: none;
 
 					i {
-						-webkit-transform: scale(1.15);
-						transform: scale(1.15);
+						-webkit-transform: scale(1.05);
+						transform: scale(1.05);
 					}
 
 					span {
