--- a/src/less/posts/nextprev.less
+++ b/src/less/posts/nextprev.less
@@ -6,16 +6,30 @@
     background: white;
     width: auto;
 
+    @media(max-width:800px) {
+      bottom: -30px;
+      left: -37px;
+      width: 111%;
+    }
+
+    @media(max-width: 600px) {
+      left: -30px;
+      background: white;
+      width: auto;
+      max-width: 111%;
+    }
+
     .nextprev {
       display: flex;
       flex-direction: row;
       flex-wrap: nowrap;
-      margin-top: 30px;
-      border-top: 1px solid #ecf0f9;
 
       .prev-article {
         border-right: 1px solid #ecf0f9;
+        border-top: 1px solid #ecf0f9;
         visibility: hidden;
+        padding: 30px 0 30px 1% !important;
+
 
         .info {
           margin-left: 30px;
@@ -26,6 +40,7 @@
       .next-article {
         border-left: 1px solid #ecf0f9;
         visibility: hidden;
+        border-top: 1px solid #ecf0f9;
 
         .info {
           margin-right: 30px;
@@ -38,13 +53,12 @@
       }
 
       .seriespagination {
-        width: 45%;
         display: flex;
         flex-direction: row;
         justify-content: left;
         align-items: center;
-        padding: 30px 1.7%;
-        max-width: 44%;
+        padding: 30px 0 30px 0;
+        min-width: 49%;
         flex-grow: 1;
 
         * {
@@ -103,6 +117,10 @@
           font-size: 0.8em;
           line-height: 1.1;
           max-width: 90%;
+
+          @media(max-width: 600px) {
+            line-height: 1.1 !important;
+          }
         }
       }
     }
