--- a/src/less/posts/nextprev.less
+++ b/src/less/posts/nextprev.less
@@ -41,6 +41,7 @@
         border-left: 1px solid #ecf0f9;
         visibility: hidden;
         border-top: 1px solid #ecf0f9;
+        padding: 30px 1% 30px 0 !important;
 
         .info {
           margin-right: 30px;
@@ -93,7 +94,7 @@
           display: flex;
           flex-direction: row;
           flex-wrap: wrap;
-          max-width: 80%;
+          max-width: 387px;
 
           * {
             width: 100%;
