finding small things

--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -19,6 +19,10 @@ blockquote pre {
   code {
     &::before {
       font-size: 14px !important;
+      width: 100%;
+      padding: 5px 15px;
+      margin: 0 auto;
+      left: 0;
     }
     background: rgba(41, 61, 76, 0.84) !important;
   }
@@ -55,7 +59,7 @@ blockquote pre {
 
   pre > code {
     white-space: pre-wrap;
-    padding: 55px 25px 15px;
+    padding: 45px 25px 15px;
     @media(max-width: 600px) {
       overflow-y: hidden;
     }
