--- a/src/less/posts/table.less
+++ b/src/less/posts/table.less
@@ -224,15 +224,16 @@
         display: block;
         min-height: 1.25em;
         margin: 0 10px!important !important;
-        padding: 10px 0 !important;
+        padding: 10px 15px !important;
         border-spacing: 0;
         border-collapse: collapse;
-        overflow-wrap: normal;
+        overflow-wrap: break-word;
+        overflow: hidden;
         line-break: normal;
         white-space: normal;
         width: -webkit-fill-available;
         width: -moz-available;
-        max-width: 200px;
+        max-width: 200px !important;
       }
     }
   }
