--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -538,7 +538,7 @@
 		position: relative;
 		color: #4c3100;
 		@media(max-width: 600px) {
-			padding: 0 30px 20px;
+			padding: 50px 20px 15px !important;
 			line-height: 1.6;
     	font-size: 0.9em;
 			padding: 0 20px 20px;
@@ -622,12 +622,19 @@
 			color: #305a68;
 			padding: 3px 5px;
 
+			@media(max-width: 600px) {
+				    margin: 20px auto;
+			}
+
 			&::before{
-				background: rgb(148, 184, 207);
+				background: #87adc5;
 		    mix-blend-mode: unset;
 		    border-bottom: 1px solid #7ea0b5;
 		    color: white;
-				color: white;
+				width: 100%;
+				padding: 5px 15px;
+				margin: 0 auto;
+				left: 0;
 			}
 
 			.hljs-string {
