--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -623,13 +623,15 @@
 			padding: 3px 5px;
 
 			@media(max-width: 600px) {
-				    margin: 20px auto;
+				 margin: 0 auto;
 			}
 
 			&::before{
 				background: #87adc5;
 		    mix-blend-mode: unset;
 		    border-bottom: 1px solid #7ea0b5;
+				margin-left: 0 !important;
+				margin-right: 0 !important;
 		    color: white;
 				width: 100%;
 				padding: 5px 15px;
