--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -15,7 +15,7 @@
 		height: fit-content;
 	}
 	@media(max-width: 600px) {
-		padding-bottom: 130px;
+		padding-bottom: 130px !important;
 	}
 
 	.tag-list {
