--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -8,7 +8,7 @@
     margin: 0 35px 40px;
   }
   @media(max-width: 600px) {
-    margin: 0 25px 40px;
+    margin: 10px 25px 40px;
   }
 
   h5 {
@@ -36,7 +36,7 @@
     margin-left: 0;
     padding-left: 20px;
     @media(max-width: 600px) {
-      margin: 20px 0 10px;
+      margin: 15px 12px 10px;
     }
 
     li {
