i should go outside

--- a/src/less/posts/nextprev.less
+++ b/src/less/posts/nextprev.less
@@ -83,6 +83,11 @@ article {
           width: 28px;
           overflow: visible;
 
+          @media(max-width: 600px) {
+            height: 20px;
+            width: 20px;
+          }
+
           * {
             color: #0db0e2;
             fill: #0db0e2;
@@ -120,8 +125,8 @@ article {
           @media(max-width: 600px) {
             white-space: wrap;
             text-overflow: normal;
-            line-height: 1.25;
-            font-size: 1.1em;
+            line-height: 1.15;
+            font-size: 1em;
             font-family: 'TTNorms-Medium';
             text-overflow: unset;
             white-space: normal;
