--- a/src/less/posts/languages/default.less
+++ b/src/less/posts/languages/default.less
@@ -27,7 +27,8 @@
     -webkit-font-smoothing: antialiased;
     display: block;
     position: absolute;
-    width: 100%;
+    width: -webkit-fill-available;
+    width: -moz-fill-available;
     height: auto;
     mix-blend-mode: color-dodge;
     padding: 6px 25px;
