--- a/partials/series-widget.hbs
+++ b/partials/series-widget.hbs
@@ -1,4 +1,4 @@
-<!-- start tag cloud widget -->
+<!-- start series widget -->
 <div class="widget">
 	<h3 class="title">Series'</h3>
 	<div class="content series">
