--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -669,7 +669,7 @@
 	.recent-single-post {
 		.post-title {
 			color: #455f6f;
-			line-height: 1.4;
+			line-height: 1.2;
 			font-size: 15px;
 			margin: 0;
 			font-family: 'TTNorms-Regular', sans-serif;
@@ -720,7 +720,7 @@
 		.post-title {
 			a {
 				color: #208cad;
-				font-family: 'TTNorms-Medium',sans-serif;
+				font-family: 'TTNorms-Regular',sans-serif;
 				transition: all 0.2s ease;
 
 				&:hover {
@@ -811,7 +811,9 @@
 
 				.post-title,
 				.single-author-name {
-					font-family: 'TTNorms-Medium', sans-serif;
+					font-family: 'TTNorms-Regular', sans-serif;
+			    transition: all 0.2s ease;
+			    line-height: 1.2;
 					.transition(all 0.2s ease);
 					@media(max-width: 600px) {
 						text-align: left;
