--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -160,7 +160,7 @@
 	}
 
 	h2 {
-		margin: 40px 0 12px;
+		margin: 40px 0 20px;
 		color: #276890;
 		line-height: 1.3;
 		font-family: 'ProductSans-Regular';
@@ -461,7 +461,7 @@
 			font-style: normal;
 			font-variant: normal;
 			text-rendering: auto;
-			margin: 20px 40px 20px 25px;
+			margin: 15px 0 15px 10px;
 			padding-left: 0;
 			line-height: 1.4;
 			display: block;
@@ -562,10 +562,17 @@
 			text-rendering: auto;
 			-webkit-font-smoothing: antialiased;
 			position: absolute;
-			padding: 8px 20px;
+			padding: 6px 15px;
 			font-weight: 700;
 			top: 0;
 			left: 0;
+			right:0;
+			margin-left: unset;
+			margin-right: unset;
+
+			@media(max-width: 600px) {
+				padding: 5px 12px;
+			}
 		}
 
 		li::before {
@@ -688,12 +695,12 @@
 		line-height: 1.5;
 		@media(max-width: 600px) {
 			display: block;
-			width: -webkit-fill-available !important;
+			width: auto !important;
 			height: auto;
-			font-size: 14px !important;
+			font-size: 13px !important;
 			margin-top: 5px;
 			margin-right: calc(-50vw + 50%)!important;
-			margin-left: calc(-58vw + 50%)!important;
+			margin-left: calc(-50vw + 50%)!important;
 			padding: 10px 25px !important;
 			line-height: 1.4 !important;
 		}
@@ -750,7 +757,7 @@
 		@media(max-width: 600px) {
 			margin-left: calc(~"-50vw + 50%") !important;
 			margin-right: calc(~"-50vw + 50%") !important;
-			width: 125% !important;
+			width: auto !important;
 			max-width: none;
 			margin-top: 25px;
 			margin-bottom: 30px;
