added styles required by new SQL post

--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -607,6 +607,11 @@
 				border-radius: 2px 2px 0 0;
 				mix-blend-mode: unset;
 				width: -webkit-fill-available;
+				top: 0;
+				left: 0;
+				right: 0;
+				margin-left: unset !important;
+				margin-right: unset !important;
 			}
 		}
 	}
