--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -1,14 +1,17 @@
 #seriesposts {
-  margin: 0 60px 40px;
+  margin: 0 60px 30px;
   padding: 40px 20px 10px;
   display: none;
   background: #00608014;
   position: relative;
+  border-radius: 3px;
+  overflow: hidden;
+
   @media(max-width: 800px) {
-    margin: 0 35px 40px;
+    margin: 0 35px 30px;
   }
   @media(max-width: 600px) {
-    margin: 10px 25px 40px;
+    margin: 10px 25px 30px;
   }
 
   h5 {
@@ -18,7 +21,7 @@
     font-family: 'TTNorms-Medium', serif;
     margin-bottom: 15px;
     background: #dae7eb;
-    padding: 10px 14px;
+    padding: 12px 14px;
     width: -webkit-fill-available;
     width: -moz-fill-available;
     margin-top: 0;
@@ -40,7 +43,7 @@
     }
 
     li {
-      margin: 15px 0;
+      margin: 18px 0;
       opacity: 0.7;
       counter-increment: li -1;
       color: #597d87;
