resources style fixes

--- a/src/less/pages/resources.less
+++ b/src/less/pages/resources.less
@@ -31,8 +31,10 @@
           text-align: center;
         }
 
-        .icon {
+        .issuetype_icon {
           text-align: center !important;
+          width: 50px;
+          height: auto;
         }
 
         .summmary {
