--- a/src/less/pages/series.less
+++ b/src/less/pages/series.less
@@ -175,6 +175,7 @@
           width: 100%;
           margin: 0 0 5px;
           font-size: 1.3em;
+          min-height: 56px;
 
           a {
             font-family: 'ProductSans-Regular',sans-serif;
