added fonts to CDN

--- a/custom-resources.hbs
+++ b/custom-resources.hbs
@@ -47,7 +47,7 @@
 
 
     function python() {
-      var url = 'https://apisentris.com/api/v1/resources?order_by=updated';
+      var url = 'https://apisentris.com/api/v1/resources?order_by=issuetype';
       var headers = {
         "Content-Type": "application/json",
         "client_id": "140000",
