--- a/assets/css/twitter_custom.css
+++ b/assets/css/twitter_custom.css
@@ -1,26 +1,9 @@
 /* latin */
 @font-face {
-  font-family: 'ProductSans-Light';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Product Sans Light'), local('ProductSans-Light'), url(https://fonts.gstatic.com/s/productsans/v9/pxicypQkot1TnFhsFMOfGShdvPWbT2lBgGygpg.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-/* latin */
-@font-face {
   font-family: 'ProductSans-Regular';
   font-style: normal;
   font-weight: 400;
-  src: local('Product Sans'), local('ProductSans-Regular'), url(https://fonts.gstatic.com/s/productsans/v9/pxiDypQkot1TnFhsFMOfGShVF9eOYktMqg.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-@font-face {
-  font-family: 'ProductSans-Medium';
-  font-style: normal;
-  font-weight: 500;
-  src: local('Product Sans Medium'), local('ProductSans-Medium'), url(https://fonts.gstatic.com/s/productsans/v9/pxicypQkot1TnFhsFMOfGShd5PSbT2lBgGygpg.woff2) format('woff2');
+  src: local('Product Sans'), local('ProductSans-Regular'), url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/ProductSans-Regular.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
@@ -29,7 +12,7 @@
   font-family: 'ProductSans-Bold';
   font-style: normal;
   font-weight: 700;
-  src: local('Product Sans Bold'), local('ProductSans-Bold'), url(https://fonts.gstatic.com/s/productsans/v9/pxicypQkot1TnFhsFMOfGShdrPKbT2lBgGygpg.woff2) format('woff2');
+  src: local('Product Sans Bold'), local('ProductSans-Bold'), url('https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/ProductSans-Bold.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
@@ -38,7 +21,7 @@
   font-family: 'ProductSans-Medium';
   font-style: normal;
   font-weight: 500;
-  src: local('Product-Sans Medium'), local('ProductSans-Medium'), url("../../assets/fonts/ProductSans-Medium.woff2") format('woff2');
+  src: local('Product-Sans Medium'), local('ProductSans-Medium'), url("https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/ProductSans-Bold.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
