--- a/src/less/global/fonts.less
+++ b/src/less/global/fonts.less
@@ -12,7 +12,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local('Product Sans'), local('ProductSans-Regular'), url("../../../assets/fonts/ProductSans-Regular.woff2") format('woff2');
+  src: local('Product Sans'), local('ProductSans-Regular'), url("https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/ProductSans-Regular.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin */
@@ -21,7 +21,7 @@
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: local('Product-Sans Medium'), local('ProductSans-Medium'), url("../../../assets/fonts/ProductSans-Medium.woff2") format('woff2');
+  src: local('Product-Sans Medium'), local('ProductSans-Medium'), url("https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/ProductSans-Medium.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin */
@@ -30,19 +30,19 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: local('Product-Sans Bold'), local('ProductSans-Bold'), url("../../../assets/fonts/ProductSans-Bold.woff2") format('woff2');
+  src: local('Product-Sans Bold'), local('ProductSans-Bold'), url("https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/ProductSans-Bold.woff2") format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 @font-face {
   font-family: 'Hack';
-  src: url("../../../assets/fonts/hack-regular.woff2?sha=3114f1256") format('woff2'), url("../../../assets/fonts/hack-regular.woff?sha=3114f1256") format('woff');
+  src: url("https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/hack-regular.woff2") format('woff2'), url("https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/hack-regular.woff") format('woff');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: 'Hack';
-  src: url("../../../assets/fonts/hack-bold.woff2?sha=3114f1256") format('woff2'), url("../../../assets/fonts/hack-bold.woff?sha=3114f1256") format('woff');
+  src: url("https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/hack-bold.woff2") format('woff2'), url("https://hackers.nyc3.cdn.digitaloceanspaces.com/fonts/hack-bold.woff") format('woff');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
