added newsletter widget to mobile post

--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -15,7 +15,7 @@
 	{{^is "author"}}
 		{{> widget-social}}
 		{{> widget-sidebartag}}
-		{{> widget-sidebarnewsletter}}
+		{{> widget-newsletter}}
 	{{/is}}
 	{{#is "home"}}
 		{{> widget-series}}
