--- a/post.hbs
+++ b/post.hbs
@@ -74,9 +74,11 @@
 						{{> nextprev}}
 					</article>
 					{{> about-author}}
-						 {{#author include="count.posts"}}{{> author-card}}
+					{{#author include="count.posts"}}
+						 {{> author-card}}
 					{{/author}}
 					{{> relatedposts}}
+					{{> widget-newsletter}}
 				</div>
 				<!-- end main post area -->
 	</div>
