--- a/src/less/global/variables.less
+++ b/src/less/global/variables.less
@@ -42,6 +42,7 @@
 @mongdb-color:#86af96;
 @tableau-color:#d8a918;
 @excel-color: #74a184;
+@sql-color: #435c9e;
 
 
 @shadow-color: 0 0 5px rgba(65, 67, 144, 0.15);
