--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -544,6 +544,10 @@
 				&.hacking-tableau-server {
 					background: @tableau-color;
 				}
+
+				&.welcome-to-sql {
+					background: @sql-color;
+				}
 			}
 		}
 
