--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -60,6 +60,8 @@ blockquote pre {
   pre > code {
     white-space: pre-wrap;
     padding: 50px 25px 15px;
+    overflow-x: hidden;
+    
     @media(max-width: 600px) {
       overflow-y: hidden;
     }
